# MiroirFusion

./: CMakeLists.txt  LICENCE  README.md
cmake/Modules/: FindGLEW.cmake  FindGLFW.cmake  FindOpenCL.cmake
include/: config.h.in  data_packet.h  definitions.h  gpu_manager.h  miroir_manager.h  miroir_module.h  miroir_module_manager.h  profiler.h  raycast_module.h  surface_measurement_module.h  tracking_module.h  update_reconstruction_module.h  util.h  window_listener.h
src/: data_packet.cpp  gpu_manager.cpp  miroir.cpp  miroir_manager.cpp  miroir_module_manager.cpp  profiler.cpp  raycast_module.cpp  surface_measurement_module.cpp  tracking_module.cpp  update_reconstruction_module.cpp
src/OpenCL/: TSDF.cl  bilateral.cl  gpu_def.h  raycast.cl  test.cl  tracking_correspondence.cl  tracking_sum.cl
src/Shaders/: PhongShading.fs  PhongShading.vs  frag.glsl  vert.glsl
